--- a/templates/uploadbackup.html
+++ b/templates/uploadbackup.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div class="container">
-        <img src="static/logo.png" alt="Company Logo">
-        <h1>Plural Insight</h1>
+        <img src="static/logo.png" alt="Company Logo"> <!-- Make sure to add your logo here -->
+        <h1>Lifetime value</h1>
         <h2>Upload an Excel File</h2>
         <form action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="file" accept=".xlsx,.xls" required>
-            <input type="submit" value="Upload">
+            <input type="submit" value="Process">
         </form>
     </div>
 </body>
